# ai

./: .gitignore  README.md
.github/workflows/: deploy-docs.yml
search-algorithm/: node.py  problem.py
search-algorithm/problems/: sliding_tile.py
search_algorithm/c++/: BUILDING.md  CMakeLists.txt  Doxyfile  Makefile  adugo_main.cc  chess_main.cc  leiame.txt  main.cc
search_algorithm/c++/algorithms/: best_first_search.tpp  breadth_first_search.tpp  depth_first_search.tpp  depth_limited_search.tpp  iterative_deepening_search.tpp  search_algorithm.h
search_algorithm/c++/algorithms/adversarial_search/: adversarial_search_algorithm.h  heuristic_minimax.tpp  minimax_search.tpp  minimax_search_store_tree.tpp  minimax_search_with_pruning.tpp
search_algorithm/c++/algorithms/basic_search/: best_first_search.tpp  breadth_first_search.tpp  depth_first_search.tpp  depth_limited_search.tpp  iterative_deepening_search.tpp  search_algorithm.h
search_algorithm/c++/algorithms/basic_search/visual/: visual_best_first.tpp  visual_breadth_first.tpp  visual_search.h
search_algorithm/c++/algorithms/visual/: visual_best_first.tpp  visual_breadth_first.tpp  visual_search.h
search_algorithm/c++/data_structure/: node.cc  node.h  node.tpp  node_comparator.h  node_comparators.h  problem.cc  problem.h
search_algorithm/c++/data_structure/adversarial_search/: game.h
search_algorithm/c++/data_structure/adversarial_search/games/: adugo_game.cc  adugo_game.h  tic_tac_toe_game.cc  tic_tac_toe_game.h
search_algorithm/c++/data_structure/basic_search/: problem.h
search_algorithm/c++/data_structure/basic_search/problems/: chess_board_problem.h  sliding_tile_problem.cc  sliding_tile_problem.h
search_algorithm/c++/data_structure/problems/: chess_board_problem.cc  chess_board_problem.h  sliding_tile_problem.cc  sliding_tile_problem.h
search_algorithm/c++/data_structure/visual/: terminal_ui.h  visual_node.h  visual_node.tpp
search_algorithm/c++/docs/: node.dox
search_algorithm/c++/docs/html/: annotated.html  classNode-members.html  classNode.html  classNode__coll__graph.md5  classNode__inherit__graph.map  classProblem-members.html  classProblem.html  classes.html  classsliding__tile_1_1SlidingTileProblem-members.html  classsliding__tile_1_1SlidingTileProblem.html  classsliding__tile_1_1SlidingTileProblem__inherit__graph.map  classsliding__tile_1_1SlidingTileProblem__inherit__graph.md5  dir_000000_000004.html  dir_12b5ccc1e37c77646e06afb5c7382a43.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_b8d8e9e6d882cbdac7436f7026baf609.html  dir_bbcda070c1b61b736c70ea36396b2ef0.html  dir_c0ce462e37efe0a8d60c01d75f78f8a0.html  dir_c0ce462e37efe0a8d60c01d75f78f8a0_dep.map  dir_c0ce462e37efe0a8d60c01d75f78f8a0_dep.md5  dir_d08d0eb1f09461438b44cd30f3d8ba51.html  dir_d08d0eb1f09461438b44cd30f3d8ba51_dep.map  dir_d08d0eb1f09461438b44cd30f3d8ba51_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  (+27 more)
search_algorithm/c++/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_2.js  classes_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js
search_algorithm/c++/docs/latex/: annotated.tex  classNode.tex  classNode__coll__graph.md5  classProblem.tex  classsliding__tile_1_1SlidingTileProblem.tex  classsliding__tile_1_1SlidingTileProblem__coll__graph.md5  files.tex  hierarchy.tex  namespacenode__comparators.tex  namespaces.tex  node_8h.tex  node_8h__dep__incl.md5  node_8h__incl.md5  node__comparators_8h.tex  node__comparators_8h__dep__incl.md5  node__comparators_8h__incl.md5  problem_8h.tex  problem_8h__dep__incl.md5  problem_8h__incl.md5  refman.tex  structnode__comparators_1_1CompareByAStar.tex  structnode__comparators_1_1CompareByPathCost.tex
search_algorithm/c++/examples/: a_star_example.cc  chess_breadth.cc  chess_main.cc  tic_tac_toe_example.cc  tic_tac_toe_example_pruning.cc  tile_main.cc  visual_a_star_example.cc  visual_tic_tac_toe_example.cc
search_algorithm/c++/jogo_da_onca/: adugo_main.cc  board_indexes.txt  board_layout.txt  start_server.sh  tabuleiro_wrapper.cc  tabuleiro_wrapper.h
search_algorithm/c++/jogo_da_onca/server/: controlador  exemplo1  exemplo2  tabuleiro.h
search_algorithm/c++/tests/: adugo_game_test.cc  adugo_manual_play.cc  adugo_param_adjust.cc  adugo_unit_test.cc  plot_eval.py  run_game.sh  tabuleiro_wrapper_test.cc
search_algorithm/data_structure/problems/: sliding_tile.py
search_algorithm/python/data_structure/: node.py
